--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
   font-weight: 200;
   font-style: normal;
   background-color: var(--lb);
-  color: var(--w);
+  color: var(--bl);
 }
 
 h1, h2, h3, .h1, .h2, .h3{
@@ -74,4 +74,154 @@ h1, h2, h3, .h1, .h2, .h3{
 
 .logo{
     width: 50px;
+}
+
+/* ICON */
+
+.linea{
+    height: 5px;
+    width: 60%;
+    background-color: var(--bl);
+    position: relative;
+}
+
+.linea::before{
+    content: '';
+    height: 15px;
+    width: 15px;
+    border-radius: 50%;
+    background-color: var(--w);
+    border: 2px solid var(--bl);
+    position: absolute;
+    top: calc(50% - 10px);
+    left: calc(50% - 10px);
+}
+
+.border-bl{
+    border: 2px solid var(--bl);
+}
+
+.border-lb{
+    border: 2px solid var(--lb);
+}
+
+.border-w{
+    border: 2px solid var(--w);
+}
+
+/* TIMELINE */
+ .bor-left{
+    border-left: 3px solid var(--bl);
+ }
+
+ .bor-right{
+    border-right: 3px solid var(--bl);
+ }
+
+.pallino-r{
+    position:relative;
+}
+
+.pallino-r::after{
+    content: '';
+     height: 15px;
+    width: 15px;
+    border-radius: 50%;
+    background-color: var(--w);
+    border: 2px solid var(--bl);
+    position: absolute;
+    top: 0px;
+    right: -22px;
+}
+
+.pallino-l{
+    position:relative;
+}
+
+.pallino-l::after{
+    content: '';
+     height: 15px;
+    width: 15px;
+    border-radius: 50%;
+    background-color: var(--w);
+    border: 2px solid var(--bl);
+    position: absolute;
+    top: 0px;
+    left: -22px;
+}
+
+
+/* .bor-left{
+    border-left: 3px solid var(--bl);
+}
+
+.pallino{
+    position: relative;
+}
+
+.pallino::after{
+    content: '';
+     height: 15px;
+    width: 15px;
+    border-radius: 50%;
+    background-color: var(--w);
+    border: 2px solid var(--bl);
+    position: absolute;
+    top: 0px;
+    left: -20px;
+} */
+
+
+/* BUTTONS */
+
+
+.button-custom{
+    height: 70px;
+    width: 200px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-left: auto;
+    position: relative;
+
+}
+
+.top-right{
+    height: 20px;
+    width: 20px;
+    border-top: 2px solid var(--w);
+    border-right: 2px solid var(--w);
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+
+.top-left{
+    height: 20px;
+    width: 20px;
+    border-top: 2px solid var(--w);
+    border-left: 2px solid var(--w);
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.bottom-right{
+    height: 20px;
+    width: 20px;
+    border-bottom: 2px solid var(--w);
+    border-right: 2px solid var(--w);
+    position: absolute;
+    bottom: 0;
+    right: 0;
+}
+
+.bottom-left{
+    height: 20px;
+    width: 20px;
+    border-bottom: 2px solid var(--w);
+    border-left: 2px solid var(--w);
+    position: absolute;
+    bottom: 0;
+    left: 0;
 }
